--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -315,7 +315,7 @@ span.screen-reader-text {
   margin-bottom: 0rem !important;
 }
 .section_3_col {
-  width: 295px;
+  width: 24%;
   flex-wrap: wrap;
 }
 .cta-icon {
@@ -355,6 +355,7 @@ span.screen-reader-text {
   margin-right: -15px;
   margin-left: -15px;
   justify-content: space-around;
+  max-width: 30%;
 }
 .section_3_col .cta {
   -ms-flex-preferred-size: 0;
@@ -362,6 +363,9 @@ span.screen-reader-text {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .section_3_title .cta {
   margin: auto !important;
@@ -393,6 +397,7 @@ span.screen-reader-text {
   background-color: #2ca83d;
   color: white !important;
   text-decoration: none;
+  width: 65%;
 }
 .enjoy-btn .cta a {
   color: white;
@@ -2715,7 +2720,7 @@ button.search-untoggle {
   margin-right: auto;
 }
 .article-post {
-  width: 32%;
+  width: 30%;
   margin-right: 0.6rem;
   margin-left: 0.6rem;
 }
