text align center

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -228,6 +228,7 @@ path {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  text-align: center;
 }
 span.screen-reader-text {
   display: none;
