--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -7544,3 +7544,11 @@ a.to-the-top > * {
   border-bottom: 0px var(--text-color) solid !important;
   margin-bottom: 0.5em;
 }
+
+.WebString_Text_Coupon {
+  color: #212121 !important;
+}
+
+.WebString_Text_DriverAge {
+  color: #212121 !important;
+}
